<resources>
    <string name="app_name">Cook it!</string>
    <string name="action_login">Log in</string>
    <string name="action_signin">Sign in</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_credits">Credits</string>
    <string name="hint_usr">Username</string>
    <string name="hint_pass">Password</string>
    <string name="copyright">All rights reserved © Danger Ducks 2016</string>
    <string name="open_drawer">Menu</string>
    <string name="close_drawer">Close</string>
    <string name="configuration">Configuration</string>
    <string name="about">About</string>

    <string name="card">Card</string>
</resources>
