<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include
        android:id="@+id/main_toolbar"
        layout="@layout/toolbar"/>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/loginBackground"
        tools:context=".Login">



        <ImageView
            android:layout_width="@dimen/logo_login_width"
            android:layout_height="@dimen/logo_login_height"
            android:src="@drawable/main_logo_sf"
            android:layout_centerHorizontal="true"
            android:id="@+id/imageView"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/logo_login_height"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@color/colorPrimary"
            android:orientation="vertical">


            <EditText
                android:id="@+id/usr"
                android:hint="@string/hint_usr"
                android:inputType="textPersonName"
                android:background="@drawable/icon_user"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <EditText
                android:id="@+id/pass"
                android:hint="@string/hint_pass"
                android:inputType="textPassword"
                android:background="@drawable/icon_pass"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <Button
                    android:id="@+id/btn_login"
                    style="@style/loginButton"
                    android:layout_height="wrap_content"
                    android:text="@string/action_login"
                    android:layout_width="match_parent"/>

                <Button
                    android:id="@+id/btn_signin"
                    style="@style/loginButton"
                    android:layout_height="wrap_content"
                    android:text="@string/action_signin"
                    android:layout_width="match_parent"/>

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <!-- The navigation header -->
    <android.support.design.widget.NavigationView
              android:id="@+id/left_drawer"
              android:layout_width="@dimen/drawer_width"
              android:layout_height="match_parent"
              android:layout_gravity="start"
              android:fitsSystemWindows="true"
              app:headerLayout="@layout/header"
              app:menu="@menu/actions_drawer"/>

</android.support.v4.widget.DrawerLayout>